# vault-buddy

./: .fallowrc.json  .gitignore  AGENTS.md  CLAUDE.md  CONTEXT.md  LICENSE  README.md  eslint.config.mjs  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.claude/: settings.json
.claude/hooks/: session-start
.claude/skills/auditing-the-project/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: bump-version.yml  ci.yml  release.yml
docs/: DEVELOPMENT.md  Gaps.md  PRD - Product Vision.md  PRD-knowledge-intake.md  PRD.md
docs/prds/: ai-platform.md  knowledge-intake.md  knowledge-lifecycle.md  local-mcp-hub.md  platform-and-cross-cutting.md  task-management.md
docs/superpowers/plans/: 2026-07-03-increment-1-companion-daily-note.md  2026-07-04-drag-crash-diagnostics-logging.md  2026-07-04-greeting-speech-bubble.md  2026-07-04-increment-2-knowledge-intake-meeting-recording.md  (+48 more)
docs/use-cases/: README.md  additional-capture-providers.md  aggregated-task-dashboard-and-lists.md  ai-assisted-task-management.md  ai-enriched-meeting-notes.md  companion-note-and-follow-up-template.md  daily-note.md  desktop-companion.md  diagnostics-and-crash-reporting.md  document-import-pandoc.md  knowledge-search-and-retrieval.md  local-mcp-hub-assistant.md  local-transcription.md  mcp-server-and-runtime.md  meeting-recording.md  natural-language-interface.md  per-vault-task-list.md  plugin-and-agent-platform.md  re-transcription.md  recordings-browser.md  rename-recording.md  software-auto-update.md  task-tags-and-todos.md  vault-discovery-and-open.md  voice-note-recording.md  workflow-automation-engine.md
scripts/: bump-version.mjs  check-loc.mjs  check-quality.mjs  loc-baseline.json  make-icon.mjs  quality-baseline.json  setup-linux-deps.sh
src/: App.vue  announce.ts  buddyMessages.ts  characters.ts  greeting.ts  logging.ts  main.ts  style.css  types.ts
src-tauri/: Cargo.toml  deny.toml  tauri.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/capture/: Cargo.toml
src-tauri/capture/src/: devices.rs  encoder.rs  lib.rs  mixer.rs  recovery.rs  rename.rs  session.rs
src-tauri/core/: Cargo.toml
src-tauri/core/src/: app_diagnostics.rs  capture_config.rs  capture_note.rs  capture_paths.rs  checkpoint.rs  companion_placement.rs  config_merge.rs  crash.rs  daily_notes.rs  discovery.rs  document_import.rs  document_import_config.rs  lib.rs  mcp_config.rs  panel_config.rs  process.rs  recordings.rs  search.rs  search_cache.rs  services.rs  sync_util.rs  tasks.rs  template.rs  throttle.rs  transcript.rs  transcription_config.rs  uri.rs  vault_config.rs  vault_walk.rs
src-tauri/core/src/services/: mod.rs  recordings.rs  vault.rs
src-tauri/core/src/services/tasks/: lists.rs  mod.rs  tests.rs
src-tauri/core/src/tasks/: disk.rs  doc.rs  id.rs  list.rs  lists.rs  mod.rs  parse.rs  writer.rs
src-tauri/icons/: icon.icns
src-tauri/mcp/: Cargo.toml
src-tauri/mcp/src/: http.rs  lib.rs  service.rs  token.rs
src-tauri/mcp/tests/: roundtrip.rs
src-tauri/src/: capture_commands.rs  capture_config_commands.rs  commands.rs  diagnostics.rs  document_commands.rs  lib.rs  main.rs  mcp_commands.rs  model_commands.rs  pandoc.rs  search_commands.rs  task_commands.rs  transcription.rs  tray.rs
src-tauri/transcribe/: Cargo.toml
src-tauri/transcribe/examples/: transcribe_file.rs
src-tauri/transcribe/src/: decode.rs  engine.rs  lib.rs  model.rs  vad.rs
src/components/: ActionPanel.vue  AppIcon.vue  BuddyAvatar.vue  BuddySettings.vue  CaptureSettings.vue  CompanionCharacter.vue  DiagnosticsSettings.vue  DocumentImportSettings.vue  DocumentsConfigTab.vue  HighlightText.vue  ImportProgress.vue  ImportVaultPicker.vue  ImportVaultPickerList.vue  McpSettings.vue  NotificationHost.vue  PanelSizeSetting.vue  RecordMode.vue  RecordModeDialog.vue  RecordingBar.vue  RecordingConfigTab.vue  RecordingSettings.vue  Recordings.vue  RenamePrompt.vue  Search.vue  SelectMenu.vue  SpeechBubble.vue  TabGroup.vue  TaskArchivedLists.vue  TaskComposer.vue  TaskDragHandle.vue  TaskEditor.vue  TaskIdSettings.vue  TaskListPicker.vue  TaskListSettings.vue  TaskRow.vue  TaskSectionMenu.vue  TaskTemplateSettings.vue  TaskViewControls.vue  Tasks.vue  TasksConfigTab.vue  (+10 more)
src/composables/: companionPlacement.ts  useAutosave.ts  useBuddyAnnouncements.ts  useBuddyBubble.ts  useCompanionWindow.ts  useGreeting.ts  useNowTicker.ts  useOptionalFolderField.ts  useSettingsLoad.ts  useSettingsStorageSync.ts  useStartupUpdateCheck.ts  useSuppressContextMenu.ts  useTaskActions.ts  useTaskDisplay.ts  useTaskLists.ts  useTaskReorder.ts  useTaskReorderCommit.ts  useVaultFilter.ts
src/roots/: BubbleRoot.vue  BuddyRoot.vue  PanelRoot.vue  index.ts
src/stores/: capture.ts  documentImports.ts  notifications.ts  pandoc.ts  settings.ts  settingsStatus.ts  updates.ts  vaults.ts
src/utils/: basename.ts  clipboard.ts  favoriteVaults.ts  formatDuration.ts  highlight.ts  localStorageStringArray.ts  nativeDialog.ts  perViewStore.ts  recentSearches.ts  taskFields.ts  taskGrouping.ts  taskMutations.ts  taskOrder.ts  taskSections.ts  taskSort.ts
tests/: action-panel.test.ts  announce.test.ts  app-button.test.ts  app-layout.test.ts  avatar.test.ts  banner.test.ts  basename.test.ts  bubble-root.test.ts  buddy-announcements.test.ts  buddy-avatar.test.ts  buddy-messages.test.ts  buddy-root.test.ts  buddy-settings.test.ts  bump-version.test.ts  capture-settings.test.ts  capture-store.test.ts  characters.test.ts  chip.test.ts  clipboard.test.ts  companion-character.test.ts  companion-placement.test.ts  companion-window.test.ts  count-badge.test.ts  diagnostics-settings.test.ts  document-imports-store.test.ts  documentImport.test.ts  documents-config-tab.test.ts  empty-state.test.ts  favorite-vaults.test.ts  field.test.ts  format-duration.test.ts  greeting.test.ts  highlight.test.ts  icon-button.test.ts  import-progress.test.ts  import-vault-picker.test.ts  logging.test.ts  main-root.test.ts  mcp-settings.test.ts  native-dialog.test.ts  (+49 more)
tests/helpers/: taskMount.ts
(+71 files in other folders)
