[package]
name = "vault-buddy"
version = "0.1.0"
description = "AI-native desktop companion for Obsidian"
edition = "2021"

[lib]
name = "vault_buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-window-state = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-notification = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
log = "0.4"
vault_buddy_core = { path = "core" }
vault_buddy_capture = { path = "capture" }

[workspace]
members = ["core", "capture"]
