[package]
name = "vault-buddy"
version = "0.6.1"
description = "AI-native desktop companion for Obsidian"
edition = "2021"
publish = false

[lib]
name = "vault_buddy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[features]
# GPU (Vulkan) inference. Enabled ONLY by the Windows CI/release builds —
# local builds stay CPU-only so contributors never need the Vulkan SDK.
gpu = ["vault_buddy_transcribe/whisper-vulkan"]

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-log = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-notification = "2"
tauri-plugin-autostart = "2"
tauri-plugin-dialog = "2"
log = "0.4"
serde = { version = "1", features = ["derive"] }
# generate_context! serializes the plugins config section via serde_json
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
vault_buddy_core = { path = "core" }
vault_buddy_capture = { path = "capture" }
vault_buddy_transcribe = { path = "transcribe", features = ["whisper"] }
vault_buddy_mcp = { path = "mcp" }
crash-handler = "0.7.0"

# GetKeyState for the start_buddy_drag stale-request guard. windows-sys is
# already in the dependency tree via tauri, so this feature adds no new
# crate to the build.
[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61", features = ["Win32_UI_Input_KeyboardAndMouse"] }
# Registry PATH read for Pandoc detection (document_commands::registry_path_entries)
# so Recheck sees a just-installed Pandoc without an app restart.
winreg = "0.52"

[workspace]
resolver = "2"
members = ["core", "capture", "transcribe", "mcp"]
