[package]
name = "vault_buddy_core"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
percent-encoding = "2"
dirs = "6"
open = "5"
log = "0.4"
sysinfo = { version = "0.33", default-features = false, features = ["system"] }

[dev-dependencies]
tempfile = "3"
