[package]
name = "vault_buddy_core"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
percent-encoding = "2"
dirs = "6"
open = "5"
log = "0.4"
sysinfo = { version = "0.39", default-features = false, features = ["system"] }
getrandom = "0.3"

[dev-dependencies]
tempfile = "3"

# MoveFileExW for rename_noreplace's non-replacing fallback on filesystems
# without hard links (GAP-06) — std::fs::rename replaces on every platform.
[target."cfg(windows)".dependencies]
windows-sys = { version = "0.61", features = ["Win32_Foundation", "Win32_Storage_FileSystem"] }
