[package]
name = "vault_buddy_transcribe"
version = "0.1.0"
edition = "2021"
publish = false

[features]
default = []
# whisper.cpp is compiled and static-linked only with this feature on, so
# Linux CI can build/test the crate without a C++ toolchain by default. The
# shell always enables it; the Linux `rust-core` CI job builds AND runs the
# whisper FFI tests (`--features whisper`) — the only place they execute.
whisper = ["dep:whisper-rs"]

[dependencies]
vault_buddy_core = { path = "../core" }
log = "0.4"
symphonia = { version = "0.6", default-features = false, features = ["mp3"] }
ureq = "3"
sha2 = "0.10"
# `log_backend` lets `install_logging_hooks` route whisper.cpp/ggml's native
# C-level logs through the Rust `log` crate into the app's log files instead
# of the default stderr sink (discarded by a windowed Windows build).
whisper-rs = { version = "0.16", optional = true, features = ["log_backend"] }

[dev-dependencies]
mp3lame-encoder = "0.2"
tempfile = "3"

# The verification harness links the whisper engine (the `engine` module is
# gated behind the `whisper` feature), so it only builds with that feature on.
# `required-features` makes `cargo build/clippy --all-targets` SKIP it when the
# feature is off — CI's transcribe clippy runs the default (no-whisper) feature
# set — and build it under `--features whisper`.
[[example]]
name = "transcribe_file"
required-features = ["whisper"]
